# agentic-chat

./: .env-example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.cursor/rules/: code-tutor.mdc  python-project-management.mdc
app/: app.py  visual_utils.py
app/.streamlit/: config.toml
app/pages/: langchain.py  openai.py  quickstart.py  tool_calling.py  tools.py
examples/: 1_basic_agent.py  2_agent_with_tools.py  2_structured_outputs.py  3_dependencies.py  3_structured_results.py  4_agent_with_tools.py  README.md
notebooks/: streaming.ipynb
src/: agent.py
