[project]
name = "streamlit-chat"
version = "0.1.0"
description = "Example chat apps built with Streamlit"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.75.0",
    "langchain>=1.2.0",
    "langchain-anthropic>=1.3.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.6",
    "openai>=2.14.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.2",
    "sympy>=1.14.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
